01/30/2012 Jet Goodson <jetgoodson@gmail.com>
	- added LitteraLector.R
	- put in some data handling stuff
	- as much a reference as anything for now
	

01/29/2013 Jet Goodson <jetgoodson@gmail.com>
	- made repo
	- added README
	- added changelog
	- added data folder
	- added data/test.csv
	- added data/train.csv

01/30/2013 Katie Malone <cmmalone.158@gmail.com>
	- cloned repo